welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: identifier expected but '=' found.
  def printColonne(T:Array[Color]): = {
                                    ^